/*
 * Copyright and related rights waived via CC0
 *
 * You should have received a copy of the CC0 legalcode along with this
 * work. If not, see <http://creativecommons.org/publicdomain/zero/1.0/>.
 */
plugins {
    id "org.graalvm.internal.tck"
}

String libraryVersion = tck.testedLibraryVersion.get()

dependencies {
    testImplementation "org.springframework:spring-beans:$libraryVersion"
    testImplementation 'org.assertj:assertj-core:3.22.0'
}

List<String> securityManagerArgs = ["-Djava.security.manager=allow"]
def securityManagerTestLauncher = javaToolchains.launcherFor {
    languageVersion = JavaLanguageVersion.of(21)
}

graalvmNative {
    binaries {
        test {
            if ((JavaVersion.current().majorVersion as int) < 24) {
                buildArgs.addAll(securityManagerArgs)
            }
        }
    }

    agent {
        defaultMode = "conditional"
        modes {
            conditional {
                userCodeFilterPath = "user-code-filter.json"
            }
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21
}

tasks.withType(Test).configureEach {
    if ((JavaVersion.current().majorVersion as int) < 24) {
        jvmArgs += securityManagerArgs
    } else {
        // The SecurityManager branch in DisposableBeanAdapter is not reachable on JDK 24+.
        javaLauncher = securityManagerTestLauncher
        jvmArgs += securityManagerArgs
    }
}

tasks.named("nativeTest") {
    if ((JavaVersion.current().majorVersion as int) < 24) {
        runtimeArgs.addAll(securityManagerArgs)
    }
}
